--- a/src/components/CreateAccount.module.css
+++ b/src/components/CreateAccount.module.css
@@ -51,10 +51,12 @@ body {
   background-color: rgb(41, 201, 41);
   color: white;
   border: none;
-  width: 100%;
+  width: 90%;
   padding: 10px;
   border-radius: 10px;
   margin-bottom: 20px;
+  text-decoration: none;
+  text-align: center;
 }
 
 .teste {
