--- a/src/style.css
+++ b/src/style.css
@@ -2,3 +2,14 @@ h1,
 p {
   font-family: Lato;
 }
+
+html,
+body {
+  height: 100%;
+  background: linear-gradient(
+    0deg,
+    rgba(254, 254, 254, 1) 0%,
+    rgba(174, 243, 249, 1) 32%,
+    rgba(0, 232, 255, 1) 100%
+  );
+}
