--- a/src/style.css
+++ b/src/style.css
@@ -1,15 +1,11 @@
-h1,
-p {
-  font-family: Lato;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap');
 
 html,
 body {
   height: 100%;
-  background: linear-gradient(
-    0deg,
-    rgba(254, 254, 254, 1) 0%,
-    rgba(174, 243, 249, 1) 32%,
-    rgba(0, 232, 255, 1) 100%
-  );
+  background-color: rgb(79, 79, 139);
+}
+
+* {
+  font-family: 'Nunito Sans';
 }
